@@ -1,3 +1,7 @@
+30 Jan 2007
+   [Alexey]
+   - Introduced option "using identd only on connect"
+   
 29 Jan 2007
    [Alexey]
    - Introduced search in log files
